--- a/client/pom.xml
+++ b/client/pom.xml
@@ -2,17 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>tpe1-parent</artifactId>
+    <artifactId>tpe1-g12-parent</artifactId>
     <groupId>ar.edu.itba.pod.tpe1</groupId>
     <version>2024.1Q</version>
   </parent>
-  <artifactId>tpe1-client</artifactId>
+  <artifactId>tpe1-g12-client</artifactId>
   <version>2024.1Q</version>
-  <name>tpe1-client</name>
+  <name>tpe1-g12-client</name>
   <dependencies>
     <dependency>
       <groupId>ar.edu.itba.pod.tpe1</groupId>
-      <artifactId>tpe1-api</artifactId>
+      <artifactId>tpe1-g12-api</artifactId>
       <version>2024.1Q</version>
     </dependency>
   </dependencies>
