--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ar.edu.itba.pod.tpe1</groupId>
-  <artifactId>tpe1-parent</artifactId>
+  <artifactId>tpe1-g12-parent</artifactId>
   <version>2024.1Q</version>
   <packaging>pom</packaging>
-  <name>tpe1-parent</name>
+  <name>tpe1-g12-parent</name>
   <modules>
     <module>api</module>
     <module>server</module>
